Fix element collapse/expand sign state Introduce @brand-primary-disabled

--- a/app/less/style-creator.less
+++ b/app/less/style-creator.less
@@ -5,6 +5,7 @@
 @header-bg-color:#2e5365;
 @brand-primary:#5795ba;
 @brand-primary-hover:#2f7dab;
+@brand-primary-disabled: rgba(87, 149, 186, 0.35);
 
 @background-color: #f3f7f6;
 
