--- a/app/less/style-default.less
+++ b/app/less/style-default.less
@@ -5,6 +5,7 @@
 @header-bg-color:#056046;
 @brand-primary:#339933;
 @brand-primary-hover:#338833;
+@brand-primary-disabled:#94C795;
 
 @background-color: #f9f9fb;
 
