--- a/app/less/style-runtime.less
+++ b/app/less/style-runtime.less
@@ -5,6 +5,7 @@
 @header-bg-color:#006b57;
 @brand-primary:#71a69c;
 @brand-primary-hover:#3c8e80;
+@brand-primary-disabled: rgba(113, 166, 156, 0.6);
 
 @background-color: #f3f7f6;
 
