--- a/app/less/style.less
+++ b/app/less/style.less
@@ -1842,7 +1842,7 @@ section.dashboard-elements {
     transition: all 0.3s ease 0.1s;
 
     &.active {
-      border-color: #393;
+      border-color: @brand-primary;
     }
 
     span {
@@ -1866,7 +1866,7 @@ section.dashboard-elements {
       display: inline-block;
       vertical-align: middle;
       transition: all 0.3s ease 0.1s;
-      background-color: #393;
+      background-color: @brand-primary;
       border: none;
 
       i {
@@ -1877,7 +1877,7 @@ section.dashboard-elements {
 
       &:disabled {
         // opacity: 0.5;
-        background-color: #94C795;
+        background-color: @brand-primary-disabled;
       }
     }
   }
